[tool.poetry]
name = "builder"
version = "0.1.0"
description = ""
authors = ["yoptohlejepeta <peta.kotlan@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.6.0"
mkdocs-material = "^9.5.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
